--- a/Teacher/package.json
+++ b/Teacher/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^6.4.8",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.3",
+    "dayjs": "^1.11.12",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
