--- a/Teacher/package.json
+++ b/Teacher/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.52.0",
     "axios": "^1.7.3",
     "dayjs": "^1.11.12",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
